Fix: modal not scrollable on Safari mobile

--- a/resources/assets/sass/components/_modals.scss
+++ b/resources/assets/sass/components/_modals.scss
@@ -3,7 +3,8 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   z-index: layer("modal");
   background-color: rgba(0, 0, 0, 0.3);
   visibility: hidden;
